# data-etl-pipeline

./: .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml
data/output/: output.xlsx
src/: main.py  paths.py
src/pipeline/: __init__.py  extract.py  load.py  transform.py
tests/: __init__.py  test_pipeline.py
